[package]
name = "quasi_web"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = "35.0.0"
wgpu = "26.0.1"
winit = "0.26.0"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"

[build]
target = "x86_64-unknown-linux-musl"

[target.x86_64-unknown-linux-musl]
rustflags = [ "-C", "target-feature=-crt-static" ]
